Fixes hero title jump

--- a/src/components/Containers/Hero/Hero.scss
+++ b/src/components/Containers/Hero/Hero.scss
@@ -13,6 +13,10 @@
   }
 }
 
+.hero-title-placeholder {
+  color: transparent !important;
+}
+
 .hero {
   position: relative;
   height: 100vh;
